--- a/dev/Packaging Modules.html
+++ b/dev/Packaging Modules.html
@@ -6,7 +6,7 @@
 
 <!-- .. include:: /../common/stub-topic.txt -->
 
-<h1> Customize the Module Development Templates </hi>
+<h1> Packaging Modules </hi>
 
 <h2> Overview </h2>
 
@@ -20,6 +20,14 @@
 
 <h2> Steps </h2>
 <ol>
+
+<li></li>
+
+<li></li>
+
+<li></li>
+
+<li></li>
 
 <li></li>
 
