--- a/common/themes/bootstrap/navbar.html
+++ b/common/themes/bootstrap/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ pathto(master_doc) }}">
+      <a class="navbar-brand" href="{{ theme_site_home }}">
           {%- block sidebarlogo %}
             {%- if logo %}<img src="{{ pathto('_static/' + logo, 1) }}">{%- endif %}
           {%- endblock %}
