--- a/common/themes/bootstrap/sidebartoc.html
+++ b/common/themes/bootstrap/sidebartoc.html
@@ -1,5 +1,5 @@
 {% block menu %}
-	{% set toctree = toctree(maxdepth=theme_globaltoc_depth|toint, collapse=False, includehidden=theme_globaltoc_includehidden|tobool) %}
+	{% set toctree = toctree(maxdepth=theme_globaltoc_depth|toint, collapse=False, includehidden=theme_globaltoc_includehidden|tobool, titles_only=True) %}
 	{% if toctree %}
 		{{ toctree }}
 	{% else %}
